Fixed bug #46205 (Closure - Memory leaks when ReflectionException is thrown)